src/memcached-grammar.cc

#line 1 "src/memcached-grammar.rl"
/*
 * Redistribution and use in source and binary forms, with or
 * without modification, are permitted provided that the following
 * conditions are met:
 *
 * 1. Redistributions of source code must retain the above
 *    copyright notice, this list of conditions and the
 *    following disclaimer.
 *
 * 2. Redistributions in binary form must reproduce the above
 *    copyright notice, this list of conditions and the following
 *    disclaimer in the documentation and/or other materials
 *    provided with the distribution.
 *
 * THIS SOFTWARE IS PROVIDED BY <COPYRIGHT HOLDER> ``AS IS'' AND
 * ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED
 * TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
 * A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL
 * <COPYRIGHT HOLDER> OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT,
 * INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
 * DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF
 * SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR
 * BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF
 * LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
 * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF
 * THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF
 * SUCH DAMAGE.
 */


#line 34 "src/memcached-grammar.cc"
static const int memcached_start = 1;
static const int memcached_first_final = 197;
static const int memcached_error = 0;

static const int memcached_en_main = 1;


#line 33 "src/memcached-grammar.rl"


static int __attribute__((noinline))
memcached_dispatch(struct ev_io *coio, struct iobuf *iobuf)
{
	int cs;
	char *p, *pe;
	char *fstart;
	struct tbuf *keys = tbuf_new(fiber_ptr->gc_pool);
	const char *key;
	bool append, show_cas;
	int incr_sign;
	uint64_t cas, incr;
	uint32_t flags, exptime, bytes;
	bool noreply = false;
	char *data = NULL;
	bool done = false;
	uintptr_t flush_delay = 0;
	size_t keys_count = 0;
	struct ibuf *in = &iobuf->in;
	struct obuf *out = &iobuf->out;
	/* Savepoint for 'noreply' */
	struct obuf_svp obuf_svp = obuf_create_svp(out);

	p = in->pos;
	pe = in->end;

	say_debug("memcached_dispatch '%.*s'", MIN((int)(pe - p), 40) , p);

	
#line 73 "src/memcached-grammar.cc"
	{
	cs = memcached_start;
	}

#line 78 "src/memcached-grammar.cc"
	{
	if ( p == pe )
		goto _test_eof;
	switch ( cs )
	{
case 1:
	switch( (*p) ) {
		case 65: goto st2;
		case 67: goto st44;
		case 68: goto st67;
		case 70: goto st103;
		case 71: goto st124;
		case 73: goto st132;
		case 80: goto st136;
		case 81: goto st143;
		case 82: goto st148;
		case 83: goto st172;
		case 97: goto st2;
		case 99: goto st44;
		case 100: goto st67;
		case 102: goto st103;
		case 103: goto st124;
		case 105: goto st132;
		case 112: goto st136;
		case 113: goto st143;
		case 114: goto st148;
		case 115: goto st172;
	}
	goto st0;
st0:
cs = 0;
	goto _out;
st2:
	if ( ++p == pe )
		goto _test_eof2;
case 2:
	switch( (*p) ) {
		case 68: goto st3;
		case 80: goto st22;
		case 100: goto st3;
		case 112: goto st22;
	}
	goto st0;
st3:
	if ( ++p == pe )
		goto _test_eof3;
case 3:
	switch( (*p) ) {
		case 68: goto st4;
		case 100: goto st4;
	}
	goto st0;
st4:
	if ( ++p == pe )
		goto _test_eof4;
case 4:
	if ( (*p) == 32 )
		goto st5;
	goto st0;
st5:
	if ( ++p == pe )
		goto _test_eof5;
case 5:
	switch( (*p) ) {
		case 13: goto st0;
		case 32: goto st5;
	}
	if ( 9 <= (*p) && (*p) <= 10 )
		goto st0;
	goto tr15;
tr15:
#line 222 "src/memcached-grammar.rl"
	{
			fstart = p;
			for (; p < pe && *p != ' ' && *p != '\r' && *p != '\n'; p++);
			if ( *p == ' ' || *p == '\r' || *p == '\n') {
				tbuf_store_field(keys, fstart, p - fstart);
				keys_count++;
				p--;
			} else
				p = fstart;
		}
	goto st6;
st6:
	if ( ++p == pe )
		goto _test_eof6;
case 6:
#line 166 "src/memcached-grammar.cc"
	if ( (*p) == 32 )
		goto st7;
	goto st0;
st7:
	if ( ++p == pe )
		goto _test_eof7;
case 7:
	if ( (*p) == 32 )
		goto st7;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr17;
	goto st0;
tr17:
#line 221 "src/memcached-grammar.rl"
	{ fstart = p; }
	goto st8;
st8:
	if ( ++p == pe )
		goto _test_eof8;
case 8:
#line 187 "src/memcached-grammar.cc"
	if ( (*p) == 32 )
		goto tr18;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st8;
	goto st0;
tr18:
#line 244 "src/memcached-grammar.rl"
	{flags = memcached_natoq(fstart, p);}
	goto st9;
st9:
	if ( ++p == pe )
		goto _test_eof9;
case 9:
#line 201 "src/memcached-grammar.cc"
	if ( (*p) == 32 )
		goto st9;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr21;
	goto st0;
tr21:
#line 221 "src/memcached-grammar.rl"
	{ fstart = p; }
	goto st10;
st10:
	if ( ++p == pe )
		goto _test_eof10;
case 10:
#line 215 "src/memcached-grammar.cc"
	if ( (*p) == 32 )
		goto tr22;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st10;
	goto st0;
tr22:
#line 237 "src/memcached-grammar.rl"
	{
			exptime = memcached_natoq(fstart, p);
			if (exptime > 0 && exptime <= 60*60*24*30)
				exptime = exptime + ev_now();
		}
	goto st11;
st11:
	if ( ++p == pe )
		goto _test_eof11;
case 11:
#line 233 "src/memcached-grammar.cc"
	if ( (*p) == 32 )
		goto st11;
	if ( 48 <= (*p) && (*p) <= 57 )
		goto tr25;
	goto st0;
tr25:
#line 221 "src/memcached-grammar.rl"
	{ fstart = p; }
	goto st12;
st12:
	if ( ++p == pe )
		goto _test_eof12;
case 12:
#line 247 "src/memcached-grammar.cc"
	switch( (*p) ) {
		case 10: goto tr26;
		case 13: goto tr27;
		case 32: goto tr28;
	}
	if ( 48 <= (*p) && (*p) <= 57 )
		goto st12;
	goto st0;
tr26:
#line 245 "src/memcached-grammar.rl"
	{bytes = memcached_natoq(fstart, p);}
#line 279 "src/memcached-grammar.rl"
	{ p++; }
#line 250 "src/memcached-grammar.rl"
	{
			size_t parsed = p - in->pos;
			while (ibuf_size(in) - parsed < bytes + 2) {
				size_t to_read = bytes + 2 - (pe - p);
				if (coio_bread(coio, in, to_read) < to_read)
					return -1; /* premature EOF */
			}
			/*
			 * Buffered read may have reallocated the
			 * buffer.
			 */
			p = in->pos + parsed;
			pe = in->end;

			data = p;

			if (strncmp((char *)(p + bytes), "\r\n", 2) == 0) {
				p += bytes + 2;
			} else {
				goto exit;
			}
		}
#line 273 "src/memcached-grammar.rl"
	{
			done = true;
			stats.bytes_read += p - in->pos;
			in->pos = p;
		}
#line 68 "src/memcached-grammar.rl"
	{
			key = tbuf_read_field(keys);
			struct tuple *tuple = memcached_find(key);
			if (tuple != NULL && !memcached_is_expired(tuple))
				obuf_dup(out, "NOT_STORED\r\n", 12);
			else
				STORE;
		}
	goto st197;
tr30:
#line 279 "src/memcached-grammar.rl"
	{ p++; }
#line 250 "src/memcached-grammar.rl"
	{
			size_t parsed = p - in->pos;
			while (ibuf_size(in) - parsed < bytes + 2) {
				size_t to_read = bytes + 2 - (pe - p);
				if (coio_bread(coio, in, to_read) < to_read)
					return -1; /* premature EOF */
			}
			/*
			 * Buffered read may have reallocated the
			 * buffer.
			 */
			p = in->pos + parsed;
			pe = in->end;

			data = p;

			if (strncmp((char *)(p + bytes), "\r\n", 2) == 0) {
				p += bytes + 2;
			} else {
				goto exit;
			}
		}
#line 273 "src/memcached-grammar.rl"
	{
			done = true;
			stats.bytes_read += p - in->pos;
			in->pos = p;
		}
#line 68 "src/memcached-grammar.rl"
	{
			key = tbuf_read_field(keys);
			struct tuple *tuple = memcached_find(key);
			if (tuple != NULL && !memcached_is_expired(tuple))
				obuf_dup(out, "NOT_STORED\r\n", 12);
			else
				STORE;
		}
	goto st197;
tr39:
#line 281 "src/memcached-grammar.rl"
	{ noreply = true; }
#line 279 "src/memcached-grammar.rl"
	{ p++; }
#line 250 "src/memcached-grammar.rl"
	{
			size_t parsed = p - in->pos;
			while (ibuf_size(in) - parsed < bytes + 2) {
				size_t to_read = bytes + 2 - (pe - p);
				if (coio_bread(coio, in, to_read) < to_read)
					return -1; /* premature EOF */
			}
			/*
			 * Buffered read may have reallocated the
			 * buffer.
			 */
			p = in->pos + parsed;
			pe = in->end;

			data = p;

			if (strncmp((char *)(p + bytes), "\r\n", 2) == 0) {
				p += bytes + 2;
			} else {
				goto exit;
			}
		}
#line 273 "src/memcached-grammar.rl"
	{
			done = true;
			stats.bytes_read += p - in->pos;
			in->pos = p;
		}
#line 68 "src/memcached-grammar.rl"
	{
			key = tbuf_read_field(keys);
			struct tuple *tuple = memcached_find(key);
			if (tuple != NULL && !memcached_is_expired(tuple))
				obuf_dup(out, "NOT_STORED\r\n", 12);
			else
				STORE;
		}
	goto st197;
tr58:
#line 245 "src/memcached-grammar.rl"
	{bytes = memcached_natoq(fstart, p);}
#line 279 "src/memcached-grammar.rl"
	{ p++; }
#line 250 "src/memcached-grammar.rl"
	{
			size_t parsed = p - in->pos;
			while (ibuf_size(in) - parsed < bytes + 2) {
				size_t to_read = bytes + 2 - (pe - p);
				if (coio_bread(coio, in, to_read) < to_read)
					return -1; /* premature EOF */
			}
			/*
			 * Buffered read may have reallocated the
			 * buffer.
			 */
			p = in->pos + parsed;
			pe = in->end;

			data = p;

			if (strncmp((char *)(p + bytes), "\r\n", 2) == 0) {
				p += bytes + 2;
			} else {
				goto exit;
			}
		}
#line 273 "src/memcached-grammar.rl"
	{
			done = true;
			stats.bytes_read += p - in->pos;
			in->pos = p;
		}
#line 97 "src/memcached-grammar.rl"
	{
			struct tbuf *b;
			const char *field;
			uint32_t field_len;

			key = tbuf_read_field(keys);
			struct tuple *tuple = memcached_find(key);
			if (tuple == NULL) {
				obuf_dup(out, "NOT_STORED\r\n", 12);
			} else {
				field = tuple_field(tuple, 3, &field_len);
				b = tbuf_new(fiber_ptr->gc_pool);
				if (append) {
					tbuf_append(b, field, field_len);
					tbuf_append(b, data, bytes);
				} else {
					tbuf_append(b, data, bytes);
					tbuf_append(b, field, field_len);
				}

				bytes += field_len;
				data = b->data;
				STORE;
			}
		}
	goto st197;
tr62:
#line 279 "src/memcached-grammar.rl"
	{ p++; }
#line 250 "src/memcached-grammar.rl"
	{
			size_t parsed = p - in->pos;
			while (ibuf_size(in) - parsed < bytes + 2) {
				size_t to_read = bytes + 2 - (pe - p);
				if (coio_bread(coio, in, to_read) < to_read)
					return -1; /* premature EOF */
			}
			/*
			 * Buffered read may have reallocated the
			 * buffer.
			 */
			p = in->pos + parsed;
			pe = in->end;

			data = p;

			if (strncmp((char *)(p + bytes), "\r\n", 2) == 0) {
				p += bytes + 2;
			} else {
				goto exit;
			}
		}
#line 273 "src/memcached-grammar.rl"
	{
			done = true;
			stats.bytes_read += p - in->pos;
			in->pos = p;
		}
#line 97 "src/memcached-grammar.rl"
	{
			struct tbuf *b;
			const char *field;
			uint32_t field_len;

			key = tbuf_read_field(keys);
			struct tuple *tuple = memcached_find(key);
			if (tuple == NULL) {
				obuf_dup(out, "NOT_STORED\r\n", 12);
			} else {
				field = tuple_field(tuple, 3, &field_len);
				b = tbuf_new(fiber_ptr->gc_pool);
				if (append) {
					tbuf_append(b, field, field_len);
					tbuf_append(b, data, bytes);
				} else {
					tbuf_append(b, data, bytes);
					tbuf_append(b, field, field_len);
				}

				bytes += field_len;
				data = b->data;
				STORE;
			}
		}
	goto st197;
tr71:
#line 281 "src/memcached-grammar.rl"
	{ noreply = true; }
#line 279 "src/memcached-grammar.rl"
	{ p++; }
#line 250 "src/memcached-grammar.rl"
	{
			size_t parsed = p - in->pos;
			while (ibuf_size(in) - parsed < bytes + 2) {
				size_t to_read = bytes + 2 - (pe - p);
				if (coio_bread(coio, in, to_read) < to_read)
					return -1; /* premature EOF */
			}
			/*
			 * Buffered read may have reallocated the
			 * buffer.
			 */
			p = in->pos + parsed;
			pe = in->end;

			data = p;

			if (strncmp((char *)(p + bytes), "\r\n", 2) == 0) {
				p += bytes + 2;
			} else {
				goto exit;
			}
		}
#line 273 "src/memcached-grammar.rl"
	{
			done = true;
			stats.bytes_read += p - in->pos;
			in->pos = p;
		}
#line 97 "src/memcached-grammar.rl"
	{
			struct tbuf *b;
			const char *field;
			uint32_t field_len;

			key = tbuf_read_field(keys);
			struct tuple *tuple = memcached_find(key);
			if (tuple == NULL) {
				obuf_dup(out, "NOT_STORED\r\n", 12);
			} else {
				field = tuple_field(tuple, 3, &field_len);
				b = tbuf_new(fiber_ptr->gc_pool);
				if (append) {
					tbuf_append(b, field, field_len);
					tbuf_append(b, data, bytes);
				} else {
					tbuf_append(b, data, bytes);
					tbuf_append(b, field, field_len);
				}

				bytes += field_len;
				data = b->data;
				STORE;
			}
		}
	goto st197;
tr91:
#line 246 "src/memcached-grammar.rl"
	{cas = memcached_natoq(fstart, p);}
#line 279 "src/memcached-grammar.rl"
	{ p++; }
#line 250 "src/memcached-grammar.rl"
	{
			size_t parsed = p - in->pos;
			while (ibuf_size(in) - parsed < bytes + 2) {
				size_t to_read = bytes + 2 - (pe - p);
				if (coio_bread(coio, in, to_read) < to_read)
					return -1; /* premature EOF */
			}
			/*
			 * Buffered read may have reallocated the
			 * buffer.
			 */
			p = in->pos + parsed;
			pe = in->end;

			data = p;

			if (strncmp((char *)(p + bytes), "\r\n", 2) == 0) {
				p += bytes + 2;
			} else {
				goto exit;
			}
		}
#line 273 "src/memcached-grammar.rl"
	{
			done = true;
			stats.bytes_read += p - in->pos;
			in->pos = p;
		}
#line 86 "src/memcached-grammar.rl"
	{
			key = tbuf_read_field(keys);
			struct tuple *tuple = memcached_find(key);
			if (tuple == NULL || memcached_is_expired(tuple))
				obuf_dup(out, "NOT_FOUND\r\n", 11);
			else if (memcached_meta(tuple)->cas != cas)
				obuf_dup(out, "EXISTS\r\n", 8);
			else
				STORE;
		}
	goto st197;
tr95:
#line 279 "src/memcached-grammar.rl"
	{ p++; }
#line 250 "src/memcached-grammar.rl"
	{
			size_t parsed = p - in->pos;
			while (ibuf_size(in) - parsed < bytes + 2) {
				size_t to_read = bytes + 2 - (pe - p);
				if (coio_bread(coio, in, to_read) < to_read)
					return -1; /* premature EOF */
			}
			/*
			 * Buffered read may have reallocated the
			 * buffer.
			 */
			p = in->pos + parsed;
			pe = in->end;

			data = p;

			if (strncmp((char *)(p + bytes), "\r\n", 2) == 0) {
				p += bytes + 2;
			} else {
				goto exit;
			}
		}
#line 273 "src/memcached-grammar.rl"
	{
			done = true;
			stats.bytes_read += p - in->pos;
			in->pos = p;
		}
#line 86 "src/memcached-grammar.rl"
	{
			key = tbuf_read_field(keys);
			struct tuple *tuple = memcached_find(key);
			if (tuple == NULL || memcached_is_expired(tuple))
				obuf_dup(out, "NOT_FOUND\r\n", 11);
			else if (memcached_meta(tuple)->cas != cas)
				obuf_dup(out, "EXISTS\r\n", 8);
			else
				STORE;
		}
	goto st197;
tr105:
#line 281 "src/memcached-grammar.rl"
	{ noreply = true; }
#line 279 "src/memcached-grammar.rl"
	{ p++; }
#line 250 "src/memcached-grammar.rl"
	{
			size_t parsed = p - in->pos;
			while (ibuf_size(in) - parsed < bytes + 2) {
				size_t to_read = bytes + 2 - (pe - p);
				if (coio_bread(coio, in, to_read) < to_read)
					return -1; /* premature EOF */
			}
			/*
			 * Buffered read may have reallocated the
			 * buffer.
			 */
			p = in->pos + parsed;
			pe = in->end;

			data = p;

			if (strncmp((char *)(p + bytes), "\r\n", 2) == 0) {
				p += bytes + 2;
			} else {
				goto exit;
			}
		}
#line 273 "src/memcached-grammar.rl"
	{
			done = true;
			stats.bytes_read += p - in->pos;
			in->pos = p;
		}
#line 86 "src/memcached-grammar.rl"
	{
			key = tbuf_read_field(keys);
			struct tuple *tuple = memcached_find(key);
			if (tuple == NULL || memcached_is_expired(tuple))
				obuf_dup(out, "NOT_FOUND\r\n", 11);
			else if (memcached_meta(tuple)->cas != cas)
				obuf_dup(out, "EXISTS\r\n", 8);
			else
				STORE;
		}
	goto st197;
tr118:
#line 247 "src/memcached-grammar.rl"
	{incr = memcached_natoq(fstart, p);}
#line 279 "src/memcached-grammar.rl"
	{ p++; }
#line 273 "src/memcached-grammar.rl"
	{
			done = true;
			stats.bytes_read += p - in->pos;
			in->pos = p;
		}
#line 123 "src/memcached-grammar.rl"
	{
			struct meta *m;
			struct tbuf *b;
			const char *field;
			uint32_t field_len;
			uint64_t value;

			key = tbuf_read_field(keys);
			struct tuple *tuple = memcached_find(key);
			if (tuple == NULL || memcached_is_expired(tuple)) {
				obuf_dup(out, "NOT_FOUND\r\n", 11);
			} else {
				m = memcached_meta(tuple);
				field = tuple_field(tuple, 3, &field_len);

				if (memcached_is_numeric(field, field_len)) {
					value = memcached_natoq(field,
								field + field_len);

					if (incr_sign > 0) {
						value += incr;
					} else {
						if (incr > value)
							value = 0;
						else
							value -= incr;
					}

					exptime = m->exptime;
					flags = m->flags;

					b = tbuf_new(fiber_ptr->gc_pool);
					tbuf_printf(b, "%" PRIu64, value);
					data = b->data;
					bytes = b->size;

					stats.cmd_set++;
					try {
						memcached_store(key, exptime, flags, bytes, data);
						stats.total_items++;
						obuf_dup(out, b->data, b->size);
						obuf_dup(out, "\r\n", 2);
					} catch (const ClientError& e) {
						obuf_dup(out, "SERVER_ERROR ", 13);
						obuf_dup(out, e.errmsg(), strlen(e.errmsg()));
						obuf_dup(out, "\r\n", 2);
					}
				} else {
					obuf_dup(out, "CLIENT_ERROR cannot increment or decrement non-numeric value\r\n", 62);
				}
			}

		}
	goto st197;
tr122:
#line 279 "src/memcached-grammar.rl"
	{ p++; }
#line 273 "src/memcached-grammar.rl"
	{
			done = true;
			stats.bytes_read += p - in->pos;
			in->pos = p;
		}
#line 123 "src/memcached-grammar.rl"
	{
			struct meta *m;
			struct tbuf *b;
			const char *field;
			uint32_t field_len;
			uint64_t value;

			key = tbuf_read_field(keys);
			struct tuple *tuple = memcached_find(key);
			if (tuple == NULL || memcached_is_expired(tuple)) {
				obuf_dup(out, "NOT_FOUND\r\n", 11);
			} else {
				m = memcached_meta(tuple);
				field = tuple_field(tuple, 3, &field_len);

				if (memcached_is_numeric(field, field_len)) {
					value = memcached_natoq(field,
								field + field_len);

					if (incr_sign > 0) {
						value += incr;
					} else {
						if (incr > value)
							value = 0;
						else
							value -= incr;
					}

					exptime = m->exptime;
					flags = m->flags;

					b = tbuf_new(fiber_ptr->gc_pool);
					tbuf_printf(b, "%" PRIu64, value);
					data = b->data;
					bytes = b->size;

					stats.cmd_set++;
					try {
						memcached_store(key, exptime, flags, bytes, data);
						stats.total_items++;
						obuf_dup(out, b->data, b->size);
						obuf_dup(out, "\r\n", 2);
					} catch (const ClientError& e) {
						obuf_dup(out, "SERVER_ERROR ", 13);
						obuf_dup(out, e.errmsg(), strlen(e.errmsg()));
						obuf_dup(out, "\r\n", 2);
					}
				} else {
					obuf_dup(out, "CLIENT_ERROR cannot increment or decrement non-numeric value\r\n", 62);
				}
			}
